# CLI-Implementation

calc/: cli.py  pyproject.toml
calc/calc/: calculations.py  plot.py
